[package]
name = "ruspiro-cache"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.1.2" # remember to update html_root_url
description = "Raspberry Pi cache maintenance operation API"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-cache"
documentation = "https://docs.rs/ruspiro-cache/0.1.2"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "cache"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-cache", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[build-dependencies]
cc = "1.0.38"

[dependencies]

[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = []

[package.metadata.docs.rs]
all-features = false
no-default-features = true
