[package]
name = "ruspiro-cache"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.3.1" # remember to update html_root_url
description = "Raspberry Pi cache maintenance operation API"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-cache/tree/v0.3.1"
documentation = "https://docs.rs/ruspiro-cache/0.3.1"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "cache"]
categories = ["no-std", "embedded"]
edition = "2018"
links = "ruspiro-cache"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-cache", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[build-dependencies]
cc = "1.0.38"

[dependencies]

[features]
